# test_parser

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  example.json  main.py  pyproject.toml  requirements.txt
apteka_parser/: items.py  middlewares.py  pipelines.py  settings.py  telegram.py
apteka_parser/spiders/: products_spider.py
fastrstream_service/: faststream_main.py  main.py
