[tool.poetry]
name = "parser"
version = "0.1.0"
description = "test task"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.12.0"
setuptools = "^75.2.0"
scrapy = "^2.11.2"
selenium = "^4.25.0"
pydantic = "^2.9.2"
pika = "^1.3.2"
itemadapter = "^0.9.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
